# delib_flow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ThirdParty.repos  ThirdParty.template.repos  setup_deps.sh  setup_third_party_pkgs.sh
.github/workflows/: format.yaml  (+3 more)
camera_broadcast/: CMakeLists.txt  package.xml
docker_bt/: Dockerfile  Makefile  README.md  run_container.sh
docs/: Aruco_markers.md  Makefile  README.md  manipulation_in_Tiago.md
grab2_bt_testing_pkg/: CMakeLists.txt
grab2_msgs/: CMakeLists.txt
install/: local_setup.sh  setup.sh
log/: latest_build
test_world/: test_world.sdf
tiago_aruco_broadcast/: CMakeLists.txt  package.xml
tiago_behavior/: CMakeLists.txt  package.xml  plugins_list.hpp.in
tiago_behavior/config/: tree.xml
tiago_behavior/include/tiago_behavior/: CheckBattery.hpp  DockAndRecharge.hpp  MonitorCharge.hpp  UndockRobot.hpp
tiago_behavior/launch/: tiago_behavior.launch.py
tiago_behavior/src/: check_battery_node.cpp  docking_node.cpp  main_bt.cpp  monitor_charge_node.cpp  send_goal_node.cpp  undock_node.cpp
tiago_behavior_tree/: CMakeLists.txt  package.xml
tiago_behavior_tree/include/tiago_behavior_tree/: set_target_using_aruco_marker_bt_node.hpp
tiago_behavior_tree/src/: set_target_using_aruco_marker_bt_node.cpp
tiago_demos/: CMakeLists.txt  package.xml
tiago_demos/config/: map_locations.yaml  our_map.yaml
tiago_demos/include/tiago_demos/: utils.hpp
tiago_demos/launch/: bringup_tiago.launch.py  tiago_bringup.launch.py  tiago_demo.launch.py
tiago_demos/src/: btcpp_engine.cpp
tiago_demos/trees/: navigation_demo.xml  our_map_example.xml  pick_object_example.xml  test_map.xml
tiago_grab/: CMakeLists.txt  package.xml
tiago_grab/behavior_tree/: check_torso_and_head.xml  grab2_reach_object_bt.xml
tiago_grab/behavior_trees/: pick_object_bt.xml
tiago_grab/config/: grabbers_config.yaml  reach_object_config.yaml  tiago_head.yaml  tiago_positions.yaml  tiago_torso.yaml
tiago_grab/launch/: grab2_grabbers.launch.py  grab2_reach_object.launch.py  tiago_moveit2.launch.py
tiago_nav/: CMakeLists.txt  package.xml
tiago_nav/config/: bt_navigator.yaml  controller.yaml  dock_database.yaml  map_server.yaml  nova_carter_docking.yaml  planner_server.yaml  recovery.yaml  tiago_amcl.yaml
tiago_nav/config/behavior_trees/: behavior.xml
tiago_nav/launch/: nav2.launch.py  tiago_nav2.launch.py
tiago_sim/: CMakeLists.txt  package.xml
tiago_sim/config/: battery_bridge.yaml
tiago_sim/launch/: br2_gazebo.launch.py  sim.launch.py  tiago_gazebo.launch.py  tiago_pal_sim.launch.py  tiago_sim.launch.py  tiago_yolo.launch.py  yolo_tiago.launch.py
tiago_sim/models/Bathroom/BathroomSink/: model.sdf
tiago_sim/models/BathroomSink/: model.config
tiago_sim/models/BathroomSink/meshes/: BathroomSink.mtl
tiago_sim/models/Bathtub/meshes/: bathtub.dae
tiago_sim/models/Bed/meshes/: bed.dae
tiago_sim/models/BedsideTable2/: model.config
tiago_sim/models/BedsideTable2/meshes/: BedsideTable2.mtl
tiago_sim/models/Box1/: Box1.sdf  model.config
tiago_sim/models/Box1/meshes/: Box1.dae  Box1_mod.dae
tiago_sim/models/Box2/: Box2.sdf  model.config
tiago_sim/models/Box2/meshes/: Box2.dae  Box2_mod.dae
tiago_sim/models/Box3/: Box3.sdf  model.config
tiago_sim/models/Box3/meshes/: Box3.dae
tiago_sim/models/Calphalon_Kitchen_Essentials_12_Cast_Iron_Fry_Pan_Black/: model.config  model.sdf
tiago_sim/models/Calphalon_Kitchen_Essentials_12_Cast_Iron_Fry_Pan_Black/meshes/: model.mtl
tiago_sim/models/Coffee Maker/meshes/: coffee_maker.mtl
tiago_sim/models/Dining Chair/meshes/: diningchair.dae
tiago_sim/models/Dining Table/meshes/: diningtable.dae
tiago_sim/models/Drawer/: model.config
tiago_sim/models/FoodCourtTable1/: model.config  model.sdf
tiago_sim/models/FoodCourtTable1/meshes/: FoodCourtTable1.mtl  FoodCourtTable1_Col.mtl
tiago_sim/models/Fridge/: model.sdf
tiago_sim/models/Fridge/meshes/: Fridge.mtl
tiago_sim/models/KitchenCountertop/meshes/: KitchenCountertop.mtl
tiago_sim/models/LampAndStand/: model.sdf
tiago_sim/models/LampAndStand/meshes/: LampAndStand.mtl
tiago_sim/models/MiniSofa/: model.sdf
tiago_sim/models/MiniSofa/meshes/: minisofa.mtl
tiago_sim/models/NormalBed/: model.sdf
tiago_sim/models/NormalBed/meshes/: bed.mtl
tiago_sim/models/Office Chair/meshes/: officechair.dae
tiago_sim/models/Office Desk/meshes/: desk.dae
tiago_sim/models/OfficeChairBlue/: model.config  model.sdf
tiago_sim/models/OfficeChairBlue/meshes/: OfficeChairBlue.mtl
tiago_sim/models/Refrigerator/meshes/: fridge.dae
tiago_sim/models/Shower/: model.sdf
tiago_sim/models/Sofa/meshes/: Sofa.mtl
tiago_sim/models/SquareShelf/meshes/: SquareShelf.mtl
tiago_sim/models/Standard Toilet/meshes/: toilet.dae
tiago_sim/models/TVStand/meshes/: TVStand.mtl
tiago_sim/models/Toilet/: model.sdf
tiago_sim/models/TrashBin/meshes/: TrashBin.mtl
tiago_sim/models/WhiteCabinet/: model.config  model.sdf
tiago_sim/models/WhiteCabinet/meshes/: WhiteCabinet.mtl
tiago_sim/models/apple/: model.sdf
tiago_sim/models/banana/: model.sdf
tiago_sim/models/coke_can/: model.sdf
tiago_sim/models/coke_can/meshes/: coke_can.dae
tiago_sim/models/counter/: model.sdf
tiago_sim/models/desk/: model.sdf
tiago_sim/models/first_2015_trash_can/: model.sdf
tiago_sim/models/first_2015_trash_can/meshes/: trash_can.dae
tiago_sim/models/marker_1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
tiago_sim/models/marker_1/meshes/: Marker_1.dae
tiago_sim/models/marker_2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
tiago_sim/models/marker_2/meshes/: Marker_2.dae
tiago_sim/models/toilet_paper/: model.config  model.sdf
tiago_sim/models/tv_65in_emissive/material/script/: tv_emissive.material
tiago_sim/models/water/: model.sdf
tiago_sim/scripts/: fetch_models.sh
tiago_sim/worlds/: test_world.sdf  world.sdf
tiago_slam/: CMakeLists.txt  package.xml
tiago_slam/config/: tiago_online_sync.yaml
tiago_slam/launch/: tiago_slam_toolbox.launch.py
tiago_slam/rviz/: slam.rviz
(+165 files in other folders)
