<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elsayed.elsheikh97@gmail.com">sayed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>tiago_nav</depend>
  <depend>tiago_grab</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
