<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_slam</name>
  <version>1.0.0</version>
  <description>SLAM configuration and launch files for TIAGO using slam_toolbox</description>
  <maintainer email="Sfathey606@gmail.com">SherifFathey</maintainer>
  <license>Apache-2.0</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
